# Sorts

./: Doxyfile  Makefile.am  Makefile.in  README.md  configure  configure.ac
.github/workflows/: docs.yml  tests.yml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
docs/: README_8md.html  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  sorts_8h.html  sorts_8h__incl.map  sorts_8h__incl.md5  sorts_8h_source.html
docs/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  defines_0.js  functions_0.js  functions_3.js  pages_0.js  searchdata.js  typedefs_1.js
html/: dir_d44c64559bbebec7f509842c48db8b23.html  globals_func.html  globals_type.html  sorts_8h__incl.map  sorts_8h_source.html
html/search/: searchdata.js
include/: sorts.h
src/: bubble.c  exchange.c  insertion.c  selection.c
tests/: bubble.sh  driver.c  exchange.sh  insertion.sh  selection.sh
